[package]
name = "w7500x"
version = "0.1.0"
edition = "2018"
authors = ["Georges Palauqui <g.palauqui@gptechinno.com>"]
description = "Peripheral access API for Wiznet's W7500x microcontrollers"
keywords = ["arm", "cortex-m", "w7500", "wiznet", "svd2rust"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
repository = "https://github.com/GPTechinno/W7500x"
include = ["Cargo.toml", "**/*.rs", "generate.sh", "W7500x.svd", "README.md", "LICENSE", "device.x"]

[dependencies]
cortex-m = "0.7"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.13"

[features]
rt = ["cortex-m-rt/device"]