[package]
name = "w7500x-pac"
version = "0.2.0"
edition = "2018"
authors = ["Georges Palauqui <g.palauqui@gptechinno.com>"]
description = "Peripheral Access Crate for Wiznet's W7500x microcontrollers"
keywords = ["w7500", "wiznet", "svd2rust", "peripherals"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
repository = "https://github.com/GPTechinno/W7500x-pac"
include = ["Cargo.toml", "**/*.rs", "generate.sh", "W7500x.svd", "README.md", "LICENSE", "device.x"]

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.6.13", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]